--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "users-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "FinTechServer.js",
   "scripts": {
+    "start": "nodemon FinTechServer.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,7 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fast-csv": "^4.3.6",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.1"
   }
 }
