--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "FinTechServer.js",
   "scripts": {
     "dev": "nodemon FinTechServer.js",
-    "start": "node FinTechServer.js",
+    "start": "nodemon FinTechServer.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
